--- a/php-7.4-apache/Dockerfile
+++ b/php-7.4-apache/Dockerfile
@@ -72,7 +72,7 @@ WORKDIR /code
 RUN curl -o composer-setup.php https://getcomposer.org/installer && \
     curl -o composer-setup.sig https://composer.github.io/installer.sig && \
     php -r "if (hash('SHA384', file_get_contents('composer-setup.php')) !== trim(file_get_contents('composer-setup.sig'))) { unlink('composer-setup.php'); echo 'Invalid installer' . PHP_EOL; exit(1); }" && \
-    php composer-setup.php --quiet && \
+    php composer-setup.php --version=1.10.16 --quiet && \
     mv composer.phar /usr/local/bin/composer
 
 #APACHE INTALLATION
