--- a/php-7.2-apache/Dockerfile
+++ b/php-7.2-apache/Dockerfile
@@ -66,6 +66,10 @@ RUN apt-get update && apt-get install -y yarn
 RUN npm install gulp-cli -g
 RUN npm install gulp -D
 
+# Install Symfony CLI
+RUN curl -sS https://get.symfony.com/cli/installer | bash
+RUN mv /root/.symfony/bin/symfony /usr/local/bin/symfony
+
 WORKDIR /code
 
 #Composer installation
